# tauri_diesel_sqlite_example

./: README.md
src-db/: Cargo.toml  build.rs
src-db/migrations/2024-03-16-175809_initial/: down.sql  up.sql
src-db/permissions/autogenerated/: reference.md
src-db/permissions/autogenerated/commands/: add_todo.toml  list_todos.toml
src-db/permissions/schemas/: schema.json
src-db/src/: commands.rs  lib.rs  model.rs  schema.rs
src-db/src/create/: todos.rs
src-db/src/list/: todos.rs
src-db/tests/: common.rs  todos.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-www/: index.html
