[package]
name = "todos-db"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-todos-db"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.9", features = ["build"] }

[dependencies]
diesel = { version = "2.1.0", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.1.0"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0-beta.12", features = ["protocol-asset"], optional = true }
thiserror = "1.0"

[features]
default = ["tauri"]
